--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Registro de Asistencia</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     
     <video autoplay muted loop class="video-background"> 
-        <source src="/background.mp4" type="video/mp4">
-            <source src="/background.webm" type="video/webm">
+        <source src="background.mp4" type="video/mp4">
+            <source src="background.webm" type="video/webm">
         Tu navegador no soporta el elemento de video.
     </video>
 
@@ -43,7 +43,8 @@
 
     </div>
     
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body> 
+
 
 </html>
